# taxiStream

./: .gitignore  docker-compose.yml  pyproject.toml
scripts/: data_ingestion_setup.py  raw_data_loader.py
src/: app.py
src/database/: database.py
