[tool.poetry]
name = "taxistream"
version = "0.1.0"
description = "Application aimed at simulating a real-time ETL Pipeline"
authors = ["willi <williejc@ymail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.30"
pandas = "^2.2.2"
docker = "^7.1.0"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
